--- a/WebContent/view_country.xhtml
+++ b/WebContent/view_country.xhtml
@@ -12,7 +12,7 @@
 		Code: <h:inputText type="text" value="#{countryController.country.co_code}" readonly="{facesContext.currentPhaseId.ordinal eq 6}"></h:inputText>
 		<br/>
 		<br/>
-		Name: <h:inputText type="text" value="#{countryController.country.co_code}"></h:inputText>
+		Name: <h:inputText type="text" value="#{countryController.country.co_name}"></h:inputText>
 		<br/>
 		<br/>
 		Details: <h:inputText type="text" value="#{countryController.country.co_details}"></h:inputText>
