--- a/WebContent/list_countries.xhtml
+++ b/WebContent/list_countries.xhtml
@@ -37,7 +37,7 @@
 	   	<f:facet name="header">Action</f:facet>
 	   	<h:form>
 	   		<br/>
-	   			<h:commandLink value="Update" action="#{countryController.setUpdate(country)}"/>
+	   			<h:commandLink value="Update" action="#{countryController.loadCountry(country.co_code)}"/>
 	   		</h:form>
 	   </h:column>
 
