--- a/WebContent/list_regions.xhtml
+++ b/WebContent/list_regions.xhtml
@@ -12,7 +12,7 @@
 	
 </h:head>
 <h:body>
-	<h:button value="Add Region" outcome="index.xhtml" />
+	<h:button value="Add Region" outcome="add_region.xhtml" />
 	
 	<h:dataTable value = "#{regionController.regions}" var = "region"
 				styleClass="region-table"
